[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yanglab"
version = "0.1.0"
description = "Yang Lab helpers for ENMs workshop and structure-bioinformatics workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Yang Lab" }
]
dependencies = [
  "biopython==1.79",
  "numpy==1.23.5",
  "pandas==2.2.3",
  "ProDy==2.4.1",
  "requests==2.32.4",
  "rcsb-api>=1.6.0,<2.0.0",
  "scipy==1.13.0",
]

[project.optional-dependencies]
workshop = [
  "matplotlib==3.10.0",
  "notebook==7.3.2",
  "scikit-learn==1.6.1",
  "seaborn==0.13.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["yanglab", "yanglab.*"]
